# Distributed-Systems

./: .gitignore  README.md
JMS/07_DSR_1_1/: Connection.java  ConnectionFactory.java  JMSException.java  MessageConsumer.java  MessageProducer.java  MsgListener.java  Producer.java  Session.java  Subscriber.java  TextMessage.java
JMS/2019_jun/: Stanica.java
JMS/2020_oktobar/: Klijent.java
JMS/2021_junski/: Klijent.java  Prodavnica.java
MPI/: BasicExample.cpp
MPI/2021_junski/: main_a.cpp  main_b.cpp
MPI/MPI_Matrix_and_vector_product/: CMakeLists.txt  main.cpp
MPI/MPI_Matrix_and_vector_product_v2/: CMakeLists.txt  main.cpp
MPI/MPI_Max_of_30_loc/: CMakeLists.txt  main.cpp
MPI/MPI_Min_Odd_From_Table/: CMakeLists.txt  main.cpp
MPI/MPI_Vector_Dot_Product/: CMakeLists.txt  main.cpp
MPI/MPI_integral/: CMakeLists.txt  main.cpp
MPI/MPI_min_and_max_1/: CMakeLists.txt  main.cpp
MPI/MPI_product/: CMakeLists.txt  main.cpp
MPI/MPI_sum_example/: CMakeLists.txt  main.cpp
MPI/MPI_zbir_rankova/: CMakeLists.txt  main.cpp
MSMQ/: FormMain.cs
RMI/02_DSR_1_1/: Calculator.java  CalculatorClient.java  CalculatorImpl.java  CalculatorServer.java
RMI/02_DSR_1_2/: HotelClient.java  HotelManager.java  HotelManagerImpl.java  HotelServer.java  Putnik.java  Soba.java  SobaImpl.java
RMI/03_DSR_1_3/: IShape.java  IWhiteboardManager.java  Shape.java  WhiteboardClient.java  WhiteboardManager.java  WhiteboardServer.java
RMI/2021_junski/: TagClient.java  TagManager.java  TagManagerImpl.java  TagMessage.java  User.java  (+3 more)
WCF/: DefinisanjeEndPointa.config  ServiceExample.cs
(+59 files in other folders)
